--- a/storage/Views/Storage/inde.cshtml
+++ b/storage/Views/Storage/inde.cshtml
@@ -188,16 +188,14 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
                                 </a>
                                 <ul class="treeview-menu" style="display: none;">
                                     <li><a href="javascript:void(0)"><i class="fa fa-angle-right"></i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> 库存清单</font></font></font></font></a></li>
-                                    <li><a href="javascript:void(0)"><i class="fa fa-angle-right"></i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> 货品统计</font></font></font></font></a></li>
-                                    <li><a href="javascript:void(0)"><i class="fa fa-angle-right"></i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> 出入库报表</font></font></font></font></a></li>
+                                    <li><a href="javascript:void(0)"><i class="fa fa-angle-right"></i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> 供应商报表</font></font></font></font></a></li>
+                                    <li><a href="javascript:void(0)"><i class="fa fa-angle-right"></i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> 客户报表</font></font></font></font></a></li>
                                     <li><a href="javascript:void(0)"><i class="fa fa-angle-right"></i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> 入库报表</font></font></font></font></a></li>
                                     <li><a href="javascript:void(0)"><i class="fa fa-angle-right"></i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> 出库报表</font></font></font></font></a></li>
                                     <li><a href="javascript:void(0)"><i class="fa fa-angle-right"></i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> 报损报表</font></font></font></font></a></li>
                                     <li><a href="javascript:void(0)"><i class="fa fa-angle-right"></i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> 退货报表</font></font></font></font></a></li>
-                                    <li><a href="javascript:void(0)"><i class="fa fa-angle-right"></i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> 客户报表</font></font></font></font></a></li>
-                                    <li><a href="javascript:void(0)"><i class="fa fa-angle-right"></i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> 供应商报表</font></font></font></font></a></li>
-                                    <li><a href="javascript:void(0)"><i class="fa fa-angle-right"></i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> 台账记录</font></font></font></font></a></li>
-                                    <li><a href="javascript:void(0)"><i class="fa fa-angle-right"></i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> 自定义报表</font></font></font></font></a></li>
+                                    
+                                    
                                 </ul>
                             </li>
 
@@ -309,6 +307,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 <script src="~/Scripts/jquery-3.4.1.js"></script>
 <script src="~/Scripts/layui/layui.all.js"></script>
 <script src="~/Scripts/bootstrap-3.3.7/dist/js/bootstrap.min.js"></script>
+<script src="~/Scripts/echarts-all.js"></script>
 <script>
         $(function () {
             var aa = sessionStorage["Userid"];
