--- a/storage/Views/T/product_management.cshtml
+++ b/storage/Views/T/product_management.cshtml
@@ -175,8 +175,8 @@
                             //}
                         },
                         {
-                            field: 'Remark',
-                            title: '备注',
+                            field: 'count',
+                            title: '总数',
                             edit: 'text',
                             //templet: function (res) {
                             //    console.log(res)
