--- a/storage/Views/G/breakage_statement.cshtml
+++ b/storage/Views/G/breakage_statement.cshtml
@@ -1,1 +1,304 @@
-﻿<h1 style="color:red">此页面为报损报表分部视图</h1>
+﻿  
+
+<link href="~/Scripts/layui/css/layui.css" rel="stylesheet" />
+
+<div class="widget box light-grey">
+    <div class="widget-title">
+        <h4><i class="icon-globe"></i>报损报表</h4>
+        <div class="tools">
+            <a href="javascript:;" class="collapse"></a>
+            <a href="#widget-config" data-toggle="modal" class="config"></a>
+            <a href="javascript:;" class="reload"></a>
+            <a href="javascript:;" class="remove"></a>
+        </div>
+    </div>
+    <div class="widget-body">
+        <div class="clearfix margin-bottom-10">
+            <div class="btn-group" id="btnStatusGroup">
+                <button class="btn" value="10">近10天</button>
+                <button class="btn" value="30" id="btn1">近30天</button>
+                <button class="btn" value="60">近60天</button>
+                <button class="btn" value="0">历史</button>
+            </div> 
+
+            <div id="main" style="width: 590px;height:320px;">
+            </div>
+
+
+
+        </div>
+
+    <div style=" transition: 1s !important;display:none;" id="a">
+        <form class="layui-form" action="">
+            <fieldset class="layui-elem-field">
+                <legend>爱好</legend>
+                <div class="layui-field-box">
+                    <div class="layui-form-item">
+                        <div class="layui-inline">
+                            <label class="layui-form-label">供应商</label>
+                            <div class="layui-input-inline">
+                                <input type="tel" name="phone" lay-verify="required|phone" autocomplete="off" class="layui-input">
+                            </div>
+                        </div>
+
+                        <div class="layui-inline">
+                            <label class="layui-form-label">供应商</label>
+                            <div class="layui-input-inline">
+                                <input type="tel" name="phone" lay-verify="required|phone" autocomplete="off" class="layui-input">
+                            </div>
+                        </div>
+                        <div class="layui-inline">
+
+                            <select name="quiz2" style="display:block;">
+                                <option value="">请选择市</option>
+                                <option value="杭州">杭州</option>
+                                <option value="宁波" disabled="">宁波</option>
+                                <option value="温州">温州</option>
+                                <option value="温州">台州</option>
+                                <option value="温州">绍兴</option>
+                            </select>
+                        </div>
+                        <button type="button" class="layui-btn layui-btn-normal">百搭按钮</button>
+
+                    </div>
+
+                </div>
+            </fieldset>
+        </form>
+    </div>
+
+
+    <table class="layui-hide" id="test" lay-filter="test"></table>
+    
+
+    @*<script type="text/html" id="toolbarDemo">
+            <div class="layui-btn-container">
+                <button class="layui-btn layui-btn-sm" lay-event="getCheckData">获取选中行数据</button>
+                <button class="layui-btn layui-btn-sm" lay-event="getCheckLength">获取选中数目</button>
+                <button class="layui-btn layui-btn-sm" lay-event="isAll">验证是否全选</button>
+            </div>
+        </script>*@
+    <script type="text/html" id="barDemo">
+        <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
+        <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
+    </script>
+
+    <script src="~/Scripts/jquery-3.4.1.min.js"></script>
+    <script src="~/Scripts/layui/layui.all.js"></script>
+
+    @*<script src="//res.layui.com/layui/dist/layui.js" charset="utf-8"></script>*@
+    <!-- 注意：如果你直接复制所有代码到本地，上述js路径需要改成你本地的 -->
+    <script>
+
+        layui.use(['table', 'jquery'], function () {
+            var table = layui.table;
+            var $ = layui.jquery;
+
+            $("#btnHSearch").click(function () {
+                $("#a").toggle();
+            })
+
+            var tableIns = table.render({
+                elem: '#test'
+                , url: '/G/Reported_loss_report'
+                , title: '用户数据表'
+                , toolbar: '#toolbarDemo' //开启头部工具栏，并为其绑定左侧模板
+                , where: {
+                        Date:"0"
+                }
+                , cols: [[
+
+                    {
+                        field: 'bsID',
+                        title: '报损编号',
+                        fixed: 'left'
+                    },
+                    {
+                        field: 'ProductName',
+                        title: '报损物品',
+                        
+                        //templet: function (res) {
+                        //    console.log(res)
+                        //    return "<button>" + res.rkType + "</button>"
+                        //}
+                    },
+                    {
+                        field: 'Count',
+                        title: '报损数量',
+                        width: 150
+                        //edit: 'text',
+                        //templet: function (res) {
+                        //    console.log(res.ID)
+                        //    return '<em>' + res.email + '</em>'
+                        //}
+                    },
+                    {
+                        field: 'sum',
+                        title: '报损金额',
+                        width: 120,
+                        
+                        // sort: true
+                    },
+                    {
+                        field: 'bili',
+                        title: '报损总数量',
+                        width: 120,
+                        
+                        // sort: true
+                    },
+                    {
+                        fixed: 'right',
+                        title: '比例',
+                        width: 150,
+                        templet: function (res) {
+                            var bili = res.bili * 1;
+                            var count = res.Count * 1;
+                            var bilibili = count / bili;
+                            bilibili = parseInt(bilibili * 100) + "%";
+
+
+                            return '<em>' + bilibili + '</em>'
+                        }
+
+                    }
+                ]]
+                , page: true,
+                parseData: function (res) { //将原始数据解析成 table 组件所规定的数据
+                    console.log(res)
+                    return {
+                        "code": "0", //解析接口状态
+                        "msg": "", //解析提示文本
+                        "count": res.PageCount, //解析数据长度
+                        "data": res.DataList //解析数据列表
+                    };
+                }
+            });
+            $("#gritter-remove-all").click(function () {
+                tableIns.reload({
+                    where: { //设定异步数据接口的额外参数，任意设
+
+                        //…
+                    }
+                    , page: {
+                        curr: 1 //重新从第 1 页开始
+                    }
+                });
+            });
+            $(".btn").on("click", function () {
+                tableIns.reload({
+                    where: { //设定异步数据接口的额外参数，任意设
+                        Date:$(this).val()
+
+                        //…
+                    }
+                    , page: {
+                        curr: 1 //重新从第 1 页开始
+                    }
+                });
+            });
+
+            //头工具栏事件
+            //table.on('toolbar(test)', function (obj) {
+            //    var checkStatus = table.checkStatus(obj.config.id);
+            //    switch (obj.event) {
+            //        case 'getCheckData':
+            //            var data = checkStatus.data;
+            //            layer.alert(JSON.stringify(data));
+            //            break;
+            //        case 'getCheckLength':
+            //            var data = checkStatus.data;
+            //            layer.msg('选中了：' + data.length + ' 个');
+            //            break;
+            //        case 'isAll':
+            //            layer.msg(checkStatus.isAll ? '全选' : '未全选');
+            //            break;
+
+            //        //自定义头工具栏右侧图标 - 提示
+            //        case 'LAYTABLE_TIPS':
+            //            layer.alert('这是工具栏右侧自定义的一个图标按钮');
+            //            break;
+            //    };
+            //});
+
+
+            ////监听行工具事件
+            //table.on('tool(test)', function (obj) {
+            //    var data = obj.data;
+            //    //console.log(obj)
+            //    if (obj.event === 'del') {
+            //        layer.confirm('真的删除行么', function (index) {
+            //            obj.del();
+            //            layer.close(index);
+            //        });
+            //    } else if (obj.event === 'edit') {
+            //        layer.prompt({
+            //            formType: 2
+            //            , value: data.email
+            //        }, function (value, index) {
+            //            obj.update({
+            //                email: value
+            //            });
+            //            layer.close(index);
+            //        });
+            //    }
+            //});
+        });
+        $.post("https://localhost:44302/G/Reported_loss_report1", function (resp) {
+            var data = new Array();
+            var data2 = new Array();
+            console.log(resp)
+            $.each(resp, function (i, t) {
+                var obj = {};
+                obj["value"] = t.bili;
+                obj["name"] = t.ProductName[0];
+                data.push(obj);
+                data2.push(t.ProductName[0]);
+            })
+            console.log(data2)
+
+            option = {
+                tooltip: {
+                    trigger: 'item',
+                    formatter: '{a} <br/>{b}: {c} ({d}%)'
+                },
+                legend: {
+                    orient: 'vertical',
+                    left: 10,
+                    //data: ['直接访问', '邮件营销', '联盟广告', '视频广告', '搜索引擎'],
+                    //data: data2
+                    data: ['']
+                },
+                series: [
+                    {
+                        name: '访问来源',
+                        type: 'pie',
+                        radius: ['50%', '70%'],
+                        avoidLabelOverlap: false,
+                        label: {
+                            show: false,
+                            position: 'center'
+                        },
+                        emphasis: {
+                            label: {
+                                show: true,
+                                fontSize: '30',
+                                fontWeight: 'bold'
+                            }
+                        },
+                        labelLine: {
+                            show: false
+                        },
+                        data
+                    }
+                ]
+            };
+
+            var myChart = echarts.init(document.getElementById('main'));
+            //赋值
+            myChart.setOption(option);
+            console.log(option)
+        }, "json");
+        
+
+    </script>
+
