--- a/storage/Views/Y/stock_management.cshtml
+++ b/storage/Views/Y/stock_management.cshtml
@@ -181,6 +181,12 @@
                             field: 'CreateTime',
                             title: '创建时间',
                             width: 200,
+                            templet: function (res) {
+
+                                console.log(res.CreateTime)
+
+                                return DateFormat(res.CreateTime);
+                            }
                             //templet: function (d) {
                             //    if (d)}{}
                             //    return "12";
@@ -276,6 +282,20 @@
                 }
             });
                 });
+            function DateFormat(val) {
+                if (val != null) {
+                    //取得时间戳部分 如：获取 /Date(1545299299910)/ 中的 1545299299910 部分
+                    var date = new Date(parseInt(val.replace("/Date(", "").replace(")/", ""), 10));
+                    //月份为0-11，所以+1，月份小于10时补个0
+                    var month = date.getMonth() + 1 < 10 ? "0" + (date.getMonth() + 1) : date.getMonth() + 1;
+                    var currentDate = date.getDate() < 10 ? "0" + date.getDate() : date.getDate();
+                    var currentTime = date.getHours() < 10 ? "0" + date.getHours() : date.getHours();
+                    var minutes = date.getMinutes() < 10 ? "0" + date.getMinutes() : date.getMinutes();
+                    var seconds = date.getSeconds() < 10 ? "0" + date.getSeconds() : date.getSeconds();
 
+                    //格式化显示，形如：2018-12-20 17:48:19
+                    return date.getFullYear() + "-" + month + "-" + currentDate + " ";
+                }
+            }
 
         </script>
